2009-02-05  Aaron Boodman  <aa@chromium.org>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=23708
        Adds documentElementAvailable() callback to FrameLoaderClient.

        * dom/XMLTokenizerLibxml2.cpp:
        (WebCore::XMLTokenizer::startElementNs):
        Add call to dispatchDocumentElementAvailable()
        * dom/XMLTokenizerQt.cpp:
        (WebCore::XMLTokenizer::parseStartElement):
        Ditto.
        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::insertNode):
        Ditto.
        * loader/EmptyClients.h:
        (WebCore::EmptyFrameLoaderClient::documentElementAvailable):
        Stub out documentElementAvailable().
        * loader/FrameLoader.cpp:
        documentElementAvailable() callback plumbing.
        * loader/FrameLoader.h:
        Ditto.
        * loader/FrameLoaderClient.h:
        Add new documentElementAvailable() callback.

2009-02-05  Scott Violet  <sky@google.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23766
        CanvasRenderingContext2D::setShadow needs else for other platforms.

        Implements the CMYK variant of CanvasRenderingContext2D::setShadow for
        other platforms using the CMYK color constructor.

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setShadow):

2009-02-05  Scott Violet  <sky@google.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23687
        Wires up Skia'a ImageBuffer::toDataURL to support pngs.
        This helps Chromium pass a couple of layout tests.

        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::ImageBuffer::toDataURL):
        * platform/image-encoders: Added.
        * platform/image-encoders/skia: Added.
        * platform/image-encoders/skia/PNGImageEncoder.cpp: Added.
        (WebCore::):
        (WebCore::PngEncoderState::EncoderWriteCallback):